vendor/asupersync/asupersync-macros/tests/compile_fail/scope_missing_cx.rs
use asupersync_macros::scope;

fn main() {
    // scope! requires a cx argument
    scope!({ let x = 1; });
}
